[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=6.0.1",
    "pytrends>=4.9.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "stocksera>=0.1.21",
    "streamlit>=1.43.2",
    "trafilatura>=2.0.0",
    "xgboost>=3.0.0",
    "yfinance>=0.2.55",
]
